# pydantic-ai-sdk-example

./: .gitignore  Makefile  README.md  pyproject.toml  shell.nix
pydantic_ai_sdk_example/: mcp_server.py
scripts/: pydantic_mcp.py
